# The_Actualization_Theory

./: Actualization_Theory_Computational_Fluid_Dynamics_(CFD).ipynb  FDSA_QCA_Real_Benchmark_V2_U1.ipynb  FDSA_QCA_Real_Benchmark_V2_U3.ipynb  FDSA_QCA_Real_Benchmark_V3_U1.ipynb  FDSA_Real_Benchmark_V1_U2.ipynb  README.md  pyproject.toml
01_Theory_and_Algorithm/: Actualizer_Engine_Theory.md  FDSA_Theory.md  Unified_Framework.md
02_Core_Engine/: actualizer_engine.py  fdsa_pruner.py  numpy_actualizer_engine.py  qca.py  qca_parallel_engine.py
03_Tests_and_Benchmarks/: benchmark_before_after.py  test_01_hallucination.py  test_02_repetition_stress.py  test_03_pre_inference_speed.py  test_04_search_space_scaling.py  test_05_v3u1_features.py  test_06_qca_parallel_engine.py  test_07_architecture_comparison.py  test_08_latency_jax_comparison.py
04_Visualizations/: generate_all_charts.py
05_Demo/: demo_pipeline.py  demo_qca_parallel.py
06_Publication/: Actualizer_Engine_Paper.docx  Actualizer_Engine_Paper.md  Actualizer_Engine_Paper.tex  convert_md_to_pdf.py  generate_paper.py  ~$tualizer_Engine_Paper_temp.html
07_CKT_Core/: README.md  engine.py  exceptions.py  fdsa.py  mce.py  thought.py
07_CKT_Core/examples/: run_diept_demo.py  run_lifecycle_demo.py
08_QCA_Parallel_Actualizer/: README.md  compare_real_phrases - Copy.py  compare_real_phrases.py  diept.py  filters.py  global_actualizer.py  parallel_actualizer.py  test_qca_parallel.py  theory.md
examples/: run_diept_demo.py  run_lifecycle_demo.py
tests/: test_diept.py  test_engine.py
(+16 files in other folders)
