[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ckt-actualizer"
version = "0.1.0"
authors = [
  { name="Author", email="contact@example.com" },
]
description = "Computational Knowledge Theory (CKT) Actualizer Engine for concise thought generation and crystallization."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
